Fix Loading Text
This bugfix fixes an issue with the Loading Text's visibility. The loading text in certain sizes was too large for the animation, so I fixed it so that if the ring container's height is less than 150, it doesn't show the text.

--- a/src/components/loading-screen/loading-screen-component.scss
+++ b/src/components/loading-screen/loading-screen-component.scss
@@ -19,7 +19,7 @@ $size: 90%;
   animation-delay: 2s;
 }
 
-.loading-ring {
+.loading-ring-container {
   @include global.flex-center;
   height: 25%;
   aspect-ratio: 1;
